adding web experience

--- a/assignment1.html
+++ b/assignment1.html
@@ -24,5 +24,24 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
+    <h1>Steven Roomberg</h1>
+    <ul>
+      <li>4-5 years web development experience</li>
+      <li><strong>Languages:</strong></li>
+      <ul>
+        <li>PHP</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Less <em>(kind of)</em></li>
+      </ul>
+      <li><strong>Libraries &amp; other technologies:</strong></li>
+      <ul>
+        <li>JQuery</li>
+        <li>NodeJS</li>
+        <li>AngularJS</li>
+        <li>WordPress</li>
+      </ul>
+    </ul>
   </body>
 </html>
