--- a/assignment1.html
+++ b/assignment1.html
@@ -26,7 +26,7 @@
     -->
     <h1>Steven Roomberg</h1>
     <ul>
-      <li>4-5 years web development experience</li>
+      <li>4-5 years professional web development experience professionally</li>
       <li><strong>Languages:</strong></li>
       <ul>
         <li>PHP</li>
